tests/ui/codegen/evm-ir/validation/parse_immutable_overflow.evmir
@module ImmutableOverflow

bb0:
  push_immutable 0x10000000 //~ ERROR: immutable ID exceeds the assembler limit
  stop
